Update code for fix bug

--- a/KickSport/ClientApp/src/app/components/admin/create-product/create-product.component.html
+++ b/KickSport/ClientApp/src/app/components/admin/create-product/create-product.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row space-top">
     <div class="col-md-12">
-      <h1 class="title">Create New Pizza</h1>
+      <h1 class="title">Create New Kicks</h1>
     </div>
   </div>
   <form [formGroup]="createProductForm" (ngSubmit)="create()">
