--- a/KickSport/ClientApp/src/app/components/admin/edit-product/edit-product.component.html
+++ b/KickSport/ClientApp/src/app/components/admin/edit-product/edit-product.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf="product; else notFound">
   <div class="row space-top">
     <div class="col-md-12">
-      <h1 class="title">Edit Pizza</h1>
+      <h1 class="title">Edit Sneakers</h1>
     </div>
   </div>
   <form [formGroup]="editForm" (ngSubmit)="edit()">
