--- a/KickSport/ClientApp/src/app/components/menu/menu.component.html
+++ b/KickSport/ClientApp/src/app/components/menu/menu.component.html
@@ -7,7 +7,7 @@
         <input
           class="form-control form-control-sm ml-3 w-75"
           type="text"
-          placeholder="Search for the pizza you are looking for..."
+          placeholder="Search for the sneakers you are looking for..."
           aria-label="Search"
           name="query"
           (keyup)="searchChange($event)" />
