--- a/KickSport/ClientApp/src/app/components/shared/navigation/navigation.component.html
+++ b/KickSport/ClientApp/src/app/components/shared/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="bs-component">
   <nav class="navbar navbar-expand-lg navbar-dark bg-orange">
-    <a class="navbar-brand" routerLink="/home">Pizza Lab</a>
+    <a class="navbar-brand" routerLink="/home">KickSport</a>
 
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -21,7 +21,7 @@
         <a dropdownToggle class="nav-link dropdown-toggle waves-light">
         Products<span class="caret"></span></a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-            <a class="nav-link" routerLink="/admin/product/create">Create New Pizza</a>
+            <a class="nav-link" routerLink="/admin/product/create">Create New Sneakers</a>
         </div>
       </li>
       <li class="nav-item dropdown" dropdown *ngIf="authService.isAuthenticated() && authService.isAdmin()">
