Update UI and fix bug Front-end

--- a/KickSport/ClientApp/src/app/components/authentication/login-modal/login-modal.component.html
+++ b/KickSport/ClientApp/src/app/components/authentication/login-modal/login-modal.component.html
@@ -32,12 +32,10 @@
     </div>
   </div>
   <div class="modal-footer">
-    <div style="margin-right: 160px;">
-      <button type="button" class="btn btn-indigo" (click)="loginWithFb()">
-        <i class="fa fa-facebook left"></i> Login with Facebook
-      </button>
+    <div style="margin-right: 200px;">
+      <button mdbBtn type="button" gradient="blue" rounded="true" mdbWavesEffect (click)="loginWithFb()">Facebook</button>
     </div>
-    <button class="btn btn-success"
+    <button mdbBtn type="button" color="info" rounded="true" mdbWavesEffect (click)="submitForm()"
     [disabled]="!loginForm.valid">
       Login
     </button>
