--- a/KickSport/ClientApp/src/app/components/authentication/register-modal/register-modal.component.html
+++ b/KickSport/ClientApp/src/app/components/authentication/register-modal/register-modal.component.html
@@ -57,7 +57,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-success"
+    <button mdbBtn type="button" gradient="aqua" rounded="true" mdbWavesEffect
     [disabled]="!registerForm.valid">
       Register
     </button>
