--- a/KickSport/ClientApp/src/app/components/products/product-list/product-list.component.html
+++ b/KickSport/ClientApp/src/app/components/products/product-list/product-list.component.html
@@ -5,7 +5,7 @@
         id: 'allProducts',
         itemsPerPage: pageSize,
         currentPage: currentPage
-      }; trackBy: trackByIds" class="card product-card">
+      }; trackBy: trackByIds" class="product-card">
         <app-product-card [product]='product'></app-product-card>
       </div>
     </div>
