--- a/KickSport/ClientApp/src/app/components/shared/footer/footer.component.html
+++ b/KickSport/ClientApp/src/app/components/shared/footer/footer.component.html
@@ -1,6 +1,11 @@
-<footer class="footer">
-  <div class="container">
-    <span class="text-muted">&copy; <a> Kick Sport </a> {{year}}</span>
-    <a href="" target="blank" class="github-link"><i class="fa fa-github big-icon" ></i></a>
+<!-- Footer -->
+<footer class="page-footer font-small dark indigo">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href="https://mdbootstrap.com/education/angular/"> KickSport</a>
   </div>
+  <!-- Copyright -->
+
 </footer>
+<!-- Footer -->
