--- a/KickSport/ClientApp/src/app/components/admin/create-product/create-product.component.html
+++ b/KickSport/ClientApp/src/app/components/admin/create-product/create-product.component.html
@@ -78,24 +78,17 @@
             </div>
         </div>
         <div class="form-group">
-          <label class="form-control-label" for="image">Image URL</label>
-          <input
-            type="text"
-            class="form-control" 
-            id="image" 
-            formControlName="image"
-            [ngClass]="{ 'is-invalid': image.touched && image.errors }" />
+          <label class="form-control-label" for="image">Image</label>
+          <!-- <input type="file" (change)="uploadFile($event)"/>
           <div *ngIf="image.errors" class="invalid-feedback">
             <div *ngIf="image.errors.required">
               Image URL is required.
             </div>
-            <div *ngIf="image.errors.minlength">
-              Image URL must be at least 14 characters long.
+          </div> -->
+          <div class="custom-file">
+              <input type="file" class="custom-file-input" multiple formControlName="image" id="importFile" (change)="onFileChange($event.target.files)" (change)="uploadFile($event)">
+              <label class="custom-file-label" #labelImport for="importFile"><i class="fas fa-search"></i> Choose file</label>
             </div>
-            <div *ngIf="image.errors.pattern">
-              Image URL must be a valid URL address.
-            </div>
-          </div>
         </div>
         <div class="form-group">
           <label class="form-control-label" for="weight">Weight</label>
@@ -113,7 +106,7 @@
               Weight must be at least 250 gr.
             </div>
             <div *ngIf="weight.errors.max">
-              Weight should not be more than 800 gr.
+              Weight should not be more than 10000 gr.
             </div>
           </div>
         </div>
