--- a/KickSport/ClientApp/src/app/components/cart/cart.component.html
+++ b/KickSport/ClientApp/src/app/components/cart/cart.component.html
@@ -20,7 +20,7 @@
             </div>
           </div>
         </td>
-        <td data-th="Price">{{pr.price.toFixed(2)}}</td>
+        <td data-th="Price">{{pr.price.toFixed(2)}}$</td>
         <td data-th="Quantity">
           <input
             type="number"
@@ -30,10 +30,10 @@
             (change)="onQuantChange($event, pr.id)"
             value="{{pr.quantity}}" />
         </td>
-        <td data-th="Subtotal" class="text-center">{{(pr.price * pr.quantity).toFixed(2)}}</td>
+        <td data-th="Subtotal" class="text-center">{{(pr.price * pr.quantity).toFixed(2)}}$</td>
         <td class="actions" data-th="">
-          <button class="btn btn-info btn-sm custom-button" (click)="onRefreshButtonClick(pr.id)"><i class="fa fa-refresh"></i></button>
-          <button class="btn btn-danger btn-sm" (click)="onDeleteButtonClick(pr.id)"><i class="fa fa-trash-o"></i></button>
+          <button class="btn btn-info btn-sm custom-button" (click)="onRefreshButtonClick(pr.id)"><i class="fas fa-redo"></i></button>
+          <button class="btn btn-danger btn-sm" (click)="onDeleteButtonClick(pr.id)"><i class="fas fa-trash-alt"></i></button>
         </td>
       </tr>
     </tbody>
@@ -41,7 +41,7 @@
       <tr>
         <td><a routerLink="/menu" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
         <td colSpan="2" class="hidden-xs"></td>
-        <td class="hidden-xs text-center"><strong>Total {{totalSum.toFixed(2)}}</strong></td>
+        <td class="hidden-xs text-center"><strong>Total {{totalSum.toFixed(2)}}$</strong></td>
         <td *ngIf="products.length > 0"><button class="btn btn-success btn-block" (click)="onCheckoutButtonClick()">Checkout <i class="fa fa-angle-right"></i></button></td>
       </tr>
     </tfoot>
