--- a/KickSport/ClientApp/src/app/components/products/product-card/product-card.component.scss
+++ b/KickSport/ClientApp/src/app/components/products/product-card/product-card.component.scss
@@ -1,6 +1,9 @@
 img {
-  width: 300px;
-  height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 50%;
 }
 
 .text-p {
