fix bug and complete UI

--- a/KickSport/ClientApp/src/app/components/authentication/register-modal/register-modal.component.html
+++ b/KickSport/ClientApp/src/app/components/authentication/register-modal/register-modal.component.html
@@ -58,7 +58,7 @@
   </div>
   <div class="modal-footer">
     <button mdbBtn type="button" gradient="aqua" rounded="true" mdbWavesEffect
-    [disabled]="!registerForm.valid">
+    [disabled]="!registerForm.valid" (click)="submitForm()">
       Register
     </button>
   </div>
