--- a/KickSport/ClientApp/src/app/components/products/product-card/product-card.component.html
+++ b/KickSport/ClientApp/src/app/components/products/product-card/product-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
 
     <!-- Card image -->
-    <img class="card-img-top" src="{{product.image}}" alt="Card image cap">
+    <img class="card-img-top" src="{{imageUrl}}{{product.image}}" alt="Card image cap">
   
     <!-- Card content -->
     <div class="card-body">
