--- a/KickSport/ClientApp/src/app/components/products/product-details/product-details.component.html
+++ b/KickSport/ClientApp/src/app/components/products/product-details/product-details.component.html
@@ -9,7 +9,7 @@
 
             <!-- Featured image -->
             <div class="view overlay">
-              <img src="{{product.image}}" class="img-fluid" alt="Sample image for first version of blog listing">
+              <img src="{{imageUrl}}{{product.image}}" class="img-fluid" alt="Sample image for first version of blog listing">
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
