--- a/KickSport/ClientApp/src/app/components/admin/create-product/create-product.component.html
+++ b/KickSport/ClientApp/src/app/components/admin/create-product/create-product.component.html
@@ -4,7 +4,7 @@
       <h1 class="title">Create New Kicks</h1>
     </div>
   </div>
-  <form [formGroup]="createProductForm" (ngSubmit)="create()" enctype='multipart/form-data'>
+  <form [formGroup]="createProductForm" (ngSubmit)="create()" enctype="multipart/form-data">
     <div class="row space-top">
       <div class="col-md-5">
         <div class="form-group">
@@ -85,9 +85,10 @@
               Image URL is required.
             </div>
           </div> -->
-          <div class="form-group">
-            <input type="file" (change)="uploadFile($event)">
-        </div>
+          <div class="custom-file">
+              <input type="file" class="custom-file-input" multiple id="importFile" (change)="onFileChange($event.target.files)" (change)="uploadFile($event)">
+              <label class="custom-file-label" #labelImport for="importFile"><i class="fas fa-search"></i> Choose file</label>
+            </div>
         </div>
         <div class="form-group">
           <label class="form-control-label" for="weight">Weight</label>
